--- a/ui/src/app/search/search.component.scss
+++ b/ui/src/app/search/search.component.scss
@@ -11,3 +11,9 @@
 ::-ms-input-placeholder { /* Microsoft Edge */
   color: light;
 }
+.mr-2 {
+	background-color:#1DA4E1;
+}
+.jumpbotron {
+	background-color:#326992;
+}
