--- a/ui/src/app/search/search.component.scss
+++ b/ui/src/app/search/search.component.scss
@@ -12,8 +12,10 @@
   color: light;
 }
 .mr-2 {
-	background-color:#1DA4E1;
+	color:white !important;
+	border-color:white !important;
+	background-color:#1DA4E1 !important;
 }
-.jumpbotron {
-	background-color:#326992;
+.search {
+	background-color:#326992 !important;
 }
