Added unsere mission and detail page

--- a/ui/src/app/mission/mission.component.html
+++ b/ui/src/app/mission/mission.component.html
@@ -1,11 +1,73 @@
 <div class="pt-3">
   <div class="jumbotron">
     <h1 class="display-4">Unsere Mission</h1>
-    <p class="lead">Eine Webseite, die sich von offiziellen Seiten (Polizei, Bundesregierung, evtl. RKI) Informationen zieht und diese durchsuchbar und filterbar bereit stellt.</p>
+    <p class="lead">team023zip</p>
     <hr class="my-4">
-    <p>Weitere Funktionen im sollen im Nachgang darauf aufbauen.</p>
-    <p>
-      <i>Euer team023zip</i>
-    </p>
+          <div>
+            <h2>Wie alles begann?</h2>
+
+            <p>Uns interessierte, wie man in der aktuellen Krise der allgemeinen Überforderung durch die Flut von Informationen entgegenwirken kann. Es gibt viele gute und verlässliche Quellen, aber die muss man erst einmal finden. Fake News kursieren in zunehmendem Maße und tragen zur Verunsicherung bei. Die Betreiber von Social Media Netzwerken sind im Grunde machtlos.
+              Könnte man einen Ort schaffen, der sicher und vertrauenswürdig ist? Einen Ort, an dem alle Daten vorhanden sind, die man braucht. An dem man Antworten findet, sauber filterbar nach Themen, Regionen, und mit einer einfachen Suchfunktion?
+              Wir wollten so einen Ort schaffen. Eine Zentrale Informations Plattform, kurz <strong>ZIP</strong>.</p>
+
+            <p><strong>ZIP: Finde die richtigen Antworten an einem Ort!</strong>
+              <em>Wir helfen allen, die von der Informationsflut überfordert sind, an einem zentralen Ort validierte Fakten zu finden.</em></p>
+
+            <h2>Was ist die Herausforderung?</h2>
+
+            <p>Wir alle haben einen großer Bedarf an validen Informationen, gerade jetzt in der Krise. Uns fehlt der Überblick über die Relevanz, Wichtigkeit und Glaubwürdigkeit von Informationen (ganz aktuell über Covid-19). Die angespannte Lage wird verschärft durch eine große Verunsicherung und Misstrauen durch Fake News. In der Folge verhalten wir uns leider oft irrational und gefährden damit uns und andere.</p>
+
+            <h2>Was ist unser Ziel?</h2>
+
+            <p>Wir wollen direkte, glaubwürdige, schnelle Information für alle Bürger:innen bereitstellen, indem wir über unsere <strong>Zentrale</strong> <strong>Informations</strong> <strong>Plattform</strong> einen einfachen Zugriff auf verlässliche Daten aus Quellen wie Behörden, Ministerien, Instituten und Hilfsorganisationen bieten.</p>
+
+            <h2>Wer ist die Zielgruppe?</h2>
+
+            <p>Alle Bürger:innen in Deutschland. In der Phase 1, ZIP ist skalierbar.</p>
+
+            <h2>Was ist unser Lösungsvorschlag?</h2>
+
+            <p><strong>ZIP = Eine Zentrale Informations Plattform</strong>
+              Mit verschiedenen Funktionen wie Landing Page, Intelligente Suchfunktion, nach Themen und Regionen filterbar, Abo/Newsfeed, Push Benachrichtigungen, mit Quellenangaben für die Glaubwürdigkeit, responsive und barriere-frei.</p>
+
+            <h2>Was ist der gesellschaftlicher Mehrwert?</h2>
+
+            <p>Zeitnaher Zugang zu transparenter, verlässlicher und gut verständlicher Information erhöht
+              den Wissensstandes über die aktuelle Situation und damit das Verständnis für Maßnahmen und Verhaltensregeln. Durch Zugang zu den gleichen Daten wird sowohl das individuelle Sicherheitsgefühl gestärkt, wie auch ein Gemeinschaftsgefühl geschaffen. Das wiederum fördert die Bereitschaft zur Kooperation und letztlich auch das Vertrauens in die Demokratie und in die Regierung.</p>
+
+            <h2>Welche Innovationskraft hat die Lösung?</h2>
+
+            <p>Schnellere Bewältigung von Krisen &amp; Katastrophen
+              Stärkung von Vertrauen und Sicherheitsgefühl weltweit
+              Weltbürgergefühl wird unterstützt</p>
+
+            <h2>Wie sieht die Umsetzung aus?</h2>
+
+            <p>Im ersten Schritt ist <strong>ZIP</strong> eine Webseite mit Suchfunktion, die Inhalte aus verschiedenen Quellen zieht und so verlässliche Daten an einem Ort darstellt.
+              Sehr wichtig ist uns die Transparenz unserer Quellen, d.h. die Nennung von Autoren, Kategorien, Autorenseiten (Quellen-Verlinkung). Um die Glaubwürdigkeit zu stärken wäre ein
+              Design der Bundesregierung und Logos der Organisationen &amp; Behörden die Inhalte liefern hilfreich.
+              Es erfolgt eine Katalogisierung / Kategorisierung anhand von Tags und wir setzen auf eine leicht verständliche übersichtliche Benutzeroberfläche. Responsive Design ist selbstverständlich.
+              Für eine gute Annahme durch die Nutzer sorgen eine stabile Verfügbarkeit und schnelle Ladezeiten.
+              Geplant sind  außerdem eine Intelligente Suche, Filtern und Speichern, Abonnieren und Benachrichtigungen sowie zusätzliche Features wie ein Loginportal für Behörden, RSS-Feed, Beiträge mit Geo-Bezug (OpenStreetMap).</p>
+
+            <h2>Was ist noch zu tun?</h2>
+
+            <p>Bekanntmachung von <strong>ZIP</strong> über Social Media, Kampagnen, Werbebanner, Presse, TV &amp; Rundfunk
+              Entwicklung des Geschäftsmodells</p>
+
+            <h2>Ideen für Erweiterungen</h2>
+
+            <p>Anpassung für weitere Länder, Richtigstellung von Fake News (nach denen sucht der Nutzer ja) und FakeNews verifizieren (via Link / via Text-Suche / via Foto)
+              Für alle Krisen oder Notstände (nicht nur Corona)</p>
+
+            <h2>Skalierbarkeit</h2>
+
+            <p><strong>ZIP</strong> ist für große Nutzergruppen ausgelegt und daher einfach auf andere Länder übertragbar durch Anpassung von Sprache, Quellen, Themen.</p>
+
+            <p>
+              <img src="assets/team023zip.png" alt="team foto" width="100%" height="100%">
+            </p>
+          </div>
+
   </div>
 </div>
