--- a/ui/src/app/header/header.component.html
+++ b/ui/src/app/header/header.component.html
@@ -10,7 +10,7 @@
                     <a class="nav-link" routerLink="/search" routerLinkActive="active">Suche <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" routerLink="/mission">Unser Mission</a>
+                    <a class="nav-link" routerLink="/mission">Unsere Mission</a>
                 </li>
             </ul>
         </div>
