--- a/ui/src/app/search/search.component.html
+++ b/ui/src/app/search/search.component.html
@@ -60,7 +60,7 @@
                         <h5 class="card-title">{{article.headline}}</h5>
                         <h6 class="card-subtitle mb-2 text-muted">{{article.identifier}}</h6>
                         <p class="card-text">{{article.content.substring(0, 200)}} <i>[...]</i></p>
-                        <a href="#" class="card-link">Artikel lesen</a>
+                        <a href="./detail/{{article.sourceName}}" class="card-link">Artikel lesen</a>
                     </div>
                 </div>
             </div>
