--- a/ui/src/app/mission/mission.component.html
+++ b/ui/src/app/mission/mission.component.html
@@ -3,6 +3,10 @@
     <h1 class="display-4">Unsere Mission</h1>
     <p class="lead">team023zip</p>
     <hr class="my-4">
+        <div>
+          <iframe width="100%" height="100%" src="https://www.youtube.com/embed/nsBQ27nGPto" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+
           <div>
             <h2>Wie alles begann?</h2>
 
